[project]
name = "my-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.4",
    "mcp-use>=1.2.13",
    "mcp[cli]>=1.9.0",
]
